compiler-plugin/src/testData/export/Interface.kt
package export

<!EXPORTED_MARKER_Classifier(packageName=[export], classNames=[MyClass])!>@ExportSymbol
interface MyClass<!>

interface NotExported